# Perfect-Comms

./: .gitattributes  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CrewmateAvatarRenderer.cs  MeetingSpeakingIndicatorPatch.cs  ModdedRoomManager.cs  PRIVACY.md  PerfectComms.csproj  PerfectCommsUpdateClient.cs  PerfectCommsUpdateNotifier.cs  PingTrackerPatch.cs  README.md  ReactorHttpMatchmakingBridge.cs  SpeakingBarLayoutPolicy.cs  SpeakingBarPreviewSupport.cs  THIRD_PARTY_NOTICES.md  VCManager.cs  VoiceChatHudState.cs  VoiceChatPluginMain.cs  VoiceChatRoomDriver.cs  VoiceSettingsScrollPolicy.cs  nuget.config  packages.lock.json
.github/: dependabot.yml
.github/badges/: downloads.json  latest.json
.github/workflows/: ci.yml  downloads-badge.yml  native-helpers.yml  release.yml  rtc-interop.yml
Api/: PerfectCommsApi.cs
Audio/: AudioHelpers.cs  AudioProviders.cs  AudioRouting.cs  MicPreprocessor.cs  RnNoiseSuppressor.cs  SpeexEchoCanceller.cs
Comms/: AmongUsRpcSignaling.cs  AndroidMicrophone.cs  AndroidSpeaker.cs  BassRecorder.cs  BclVoiceMixer.cs  BclVoicePacket.cs  BetterCrewLinkLobbyBrowserClient.cs  BetterCrewLinkLobbyPublisher.cs  BetterCrewLinkPlaybackGraph.cs  BetterCrewLinkSocketOptions.cs  BetterCrewLinkVoiceBackend.cs  CaptureSupervisor.cs  CaptureSupervisorCore.cs  CommsChipButton.cs  ExclusiveCaptureLease.cs  ExternalVoiceState.cs  FirstRunAudioPreview.cs  FirstRunSetupDraft.cs  FirstRunSetupPolicy.cs  FirstRunToneGenerator.cs  GameStateSendGate.cs  HostOptionHolders.cs  HostSettingsPanel.cs  ICaptureSource.cs  IVoiceBackend.cs  Il2CppStateMachineWrapper.cs  InterstellarVoiceBackend.cs  MeetingLifecyclePatches.cs  MicrophoneTestLifecyclePolicy.cs  MobilePlaybackCadence.cs  MobileVoiceClient.cs  ModOptionHolders.cs  NativeLibraryCache.cs  NativeOpusCodec.cs  PathBTransport.cs  PcMobileLoader.cs  PcMobileNative.cs  PeerSessionManager.cs  PerfectCommsConfigStore.cs  PerfectCommsVoiceBackend.cs  (+79 more)
Comms/Android/: AndroidMicrophoneMonitor.cs  AndroidVoiceCapturePolicy.cs  AndroidVoiceUiPolicy.cs  VoiceChatHudState.Android.cs
Libs/: cubeb-coreaudio-rust-dependencies.html  cubeb-speex-resampler.LICENSE  df-build.md  native-rust-dependencies.html  opus-build.md  opusic-c.COPYING  pion-go-dependencies.txt
NativeAudioMacOS/: CMakeLists.txt
PerfectComms.Tests/: AmongUsRpcSignalingFramingTests.cs  AndroidMicrophoneHealthLogicTests.cs  AndroidMicrophoneMonitorTests.cs  AndroidTouchInputDecisionTests.cs  AssemblyInfo.cs  BetterCrewLinkLobbyPublisherTests.cs  CaptureSupervisorCoreTests.cs  CaptureSupervisorFailoverScenarioTests.cs  CaptureSupervisorFakeSourceTests.cs  CaptureSupervisorSampleHealthTests.cs  DeviceListPublicationTests.cs  EmbeddedManagedDependenciesTests.cs  EmbeddedNativeHelpersTests.cs  ExclusiveCaptureLeaseTests.cs  FirstRunHudPresetTests.cs  FirstRunOutputPreviewPolicyTests.cs  FirstRunSetupPolicyTests.cs  FirstRunToneGeneratorTests.cs  GameStateSendGateTests.cs  ManagedVoiceHardeningTests.cs  MicrophoneTestLifecyclePolicyTests.cs  MobilePlaybackCadenceTests.cs  PeerSessionManagerMeshTests.cs  PeerSessionManagerTests.cs  PerfectComms.Tests.csproj  PerfectCommsConfigStoreTests.cs  PerfectCommsIntegrationReflectionAbiTests.cs  RadioStateSyncTrackerTests.cs  SidecarDiagnosticsSafetyTests.cs  SidecarGameStateSafetyTests.cs  SidecarLauncherCacheTests.cs  SidecarLauncherProtocolProbeTests.cs  SidecarOutputAudioFrameTests.cs  SidecarProtocolGenerationTests.cs  SidecarVersionTests.cs  SidecarVoiceHostTests.cs  SignalingHelloMailboxTests.cs  SoftDependencyTypeResolverTests.cs  SpeakerPlaybackStateTests.cs  SpeakingBarGhostAppearancePolicyTests.cs  (+29 more)
PerfectComms.Tests/Fixtures/: cache-test-payload.txt
Properties/: AssemblyInfo.cs
cloudflare/perfect-comms-lobbies/: package-lock.json  package.json  schema.sql  wrangler.toml
docs/: MOD_INTEGRATION.md  release-notes-template.md  release-notes-v2.0.0.md  release-notes-v2.0.1.md  release-notes-v2.0.2.md  release-notes-v2.0.3.md  release-notes-v2.0.6.md  release-notes-v2.1.7.md  release-notes-v3.2.2.md
native/: cargo-about.hbs  cargo-about.toml
native/apm-sys/: .gitignore  Cargo.toml
native/apm-sys/src/: lib.rs
native/cmake/: windows-static-crt.cmake
native/df-sys/: Cargo.toml
native/pc-capture/: .gitignore  BUILD.md  Cargo.toml  README.md  build.rs
native/pc-capture/src/: audio.rs  build_info.rs  codec.rs  diagnostics.rs  dsp.rs  engine.rs  gamestate.rs  input.rs  ipc.rs  lib.rs  main.rs  mix.rs  opus_native.rs  owner.rs  proto.rs  rtc.rs  rtc_pion.rs
native/pc-capture/tests/: launch_cancellation.rs  synthetic_e2e.rs
native/pc-mobile/: .gitignore  Cargo.toml
native/pc-mobile/src/: lib.rs
native/pc-pion/: abi.go  abi_test.go  contract_marker.c  engine.go  engine_test.go  epoch_gate.go  epoch_gate_test.go  go.mod  logger.go  logger_test.go  loopback_test.go  main.go  mesh_stress_test.go  peer.go  queues.go  queues_test.go  stats.go  stats_test.go  tracking_listener.go  tracking_listener_test.go
native/pion-sys/: Cargo.toml
native/rtc-interop/: Cargo.toml  signal-bridge.py
native/rtc-interop/sipsorcery-answer/: Program.cs  sipsorcery-answer.csproj
native/rtc-interop/src/: main.rs
release-assets/: BepInEx.cfg
release-assets/android/: AndroidManifest.xml  README.md
release-assets/dependencies/: THIRD_PARTY_NOTICES.md
scripts/: build-apm.sh  build-df.sh  build-helpers.sh  build-mac.sh  build-pion.sh  ci-smoke-helper.sh  fetch-bepinex.sh  generate-cubeb-license-inventories.py  live-turn-smoke.py  p2p-mesh-smoke.py  package-macos.ps1  package-release.ps1  package-release.sh  verify-cubeb-provenance.py  verify-native-license-inventory.py  verify-package-layout.py  verify-pion-license-inventory.py  verify-release-assets.py
wiki/: Controls.md  Home.md  Host-Settings.md  Installing-Perfect-Comms.md  Mod-Integration-API-Reference.md  Mod-Integration-Channels.md  Mod-Integration-Examples.md  Mod-Integration-Gate.md  Mod-Integration-Host-Options.md  Mod-Integration-Listener-Origin.md  Mod-Integration-Overlay-Privacy.md  Mod-Integration.md  Players.md  README.md  _Sidebar.md
(+7 files in other folders)
