[package]
name = "pc-capture"
version = "0.1.0"
edition = "2021"
description = "PerfectComms native host-side microphone capture helper (loopback TCP sidecar)."
license = "LGPL-2.1-only"

[[bin]]
name = "pc-capture"
path = "src/main.rs"

# The processing core (codec/dsp/mix/gamestate/proto/rtc) is a library so the Android
# cdylib (native/pc-mobile) can reuse it without the desktop-only IPC server + cpal.
[lib]
name = "pc_capture"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
apm-sys = { path = "../apm-sys" }
opusic-c = { version = "1.6.1", default-features = false, features = ["bundled", "dred"] }
webrtc = "=0.17.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"

# cpal (audio device I/O) is desktop-only; on Android the C# layer captures via the Unity
# Microphone API and plays via AudioSource, passing PCM across the FFI. Excluding it from
# the Android build keeps the cross-compile free of the oboe/JNI backend.
[target.'cfg(not(target_os = "android"))'.dependencies]
cpal = "=0.18.1"
crossbeam-channel = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.dev.package.opusic-sys]
opt-level = 2

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
