[package]
name = "pc-capture"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "PerfectComms native host-side microphone capture helper (loopback TCP sidecar)."
license = "LGPL-2.1-only"

[[bin]]
name = "pc-capture"
path = "src/main.rs"

# The processing core (codec/dsp/mix/gamestate/proto/rtc) is a library so the Android
# cdylib (native/pc-mobile) can reuse it without the desktop-only IPC server + Cubeb.
[lib]
name = "pc_capture"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
apm-sys = { path = "../apm-sys" }
pion-sys = { path = "../pion-sys" }
opusic-c = { version = "1.6.1", default-features = false, features = ["bundled", "dred"] }
parking_lot = "0.12"

# Cubeb (audio device I/O) is desktop-only; on Android the C# layer captures via the Unity
# Microphone API and plays via AudioSource, passing PCM across the FFI. Excluding it from
# the Android build keeps the cross-compile free of desktop audio backends.
[target.'cfg(not(target_os = "android"))'.dependencies]
cubeb = "=0.36.0"
crossbeam-channel = "0.5"

# On Linux, prefer Cubeb's C Pulse/ALSA backends, which dynamically load the host audio
# libraries. Disabling the nested Rust Pulse backend avoids making libpulse a hard runtime
# dependency and preserves native-Linux ALSA-only compatibility.
[target.'cfg(target_os = "linux")'.dependencies]
cubeb-sys = { version = "=0.36.0", features = ["unittest-build"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.dev.package.opusic-sys]
opt-level = 2

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[patch.crates-io]
# cubeb-rs 0.36.0 moves callback ownership before stream_init and leaks it on an error return.
# Keep the exact released API/source locally with a minimal RAII fix for failed device opens.
cubeb = { path = "../vendor/cubeb" }
# Keep libcubeb's nested Rust backend builds locked and expose its compiled-backend inventory.
cubeb-sys = { path = "../vendor/cubeb-sys" }
