[package]
name = "rtc-interop"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "PerfectComms WebRTC interop gate: webrtc-rs offer peer for SIPSorcery DTLS-SRTP/Opus interop and i686 build check."

[[bin]]
name = "rtc-interop"
path = "src/main.rs"

[dependencies]
webrtc = "0.11"
tokio = { version = "1", features = ["full"] }
audiopus = "0.2"
serde_json = "1"
anyhow = "1"
bytes = "1"
