[package]
name = "rtc-interop"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-only"
description = "PerfectComms WebRTC interop gate: webrtc-rs offer peer for SIPSorcery DTLS-SRTP/Opus interop and i686 build check."

[[bin]]
name = "rtc-interop"
path = "src/main.rs"

[dependencies]
webrtc = "=0.17.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
bytes = "1"
